--- a/node.jquery.mobile/public/views/account.html
+++ b/node.jquery.mobile/public/views/account.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html class="ui-mobile min-width-320px min-width-480px min-width-768px min-width-1024px landscape">
 <head>
+    <script>
+        var page = 'account';
+        var rendered = '{rendered}';
+    </script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <base href=".">
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
@@ -13,30 +17,11 @@
     <script src="/javascripts/underscore-min.js"></script>
     <script src="/javascripts/backbone-min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
-
-    <!--server-->
-    <script>
-        var page = 'account';
-        $.mobile.autoInitializePage = true;
-    </script>
-    <script src="/javascripts/bootstrap_server_templating.js"></script>
-
-    <!--compile
-     <script>
-        var page = 'account';
-        $.mobile.autoInitializePage = false;
-    </script>
     <script src="/javascripts/dust-full-0.3.0.min.js"></script>
-    <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
-
+    <script src="/javascripts/node-plates.js"></script>
     <!--precompile
-    <script>
-        var page = 'account';
-        $.mobile.autoInitializePage = false;
-    </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
-    <script src="/views/partials/compiled_0_0_1/account_0_0_1.js"></script>
-    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>-->
+    <script src="/views/partials/compiled_0_0_1/account_0_0_1.js"></script>-->
 </head>
 <body class="ui-mobile-viewport" id="account">
     <div data-role="page" class="ui-page ui-body-c " >
