--- a/node.html5.boilerplate/public/views/home.html
+++ b/node.html5.boilerplate/public/views/home.html
@@ -14,8 +14,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../css/style.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/javascripts/jquery-1.7.1.min.js"><\/script>')</script>
+    <script src="/javascripts/jquery-1.7.1.min.js"></script>
     <script src="/javascripts/modernizr-2.5.3.min.js"></script>
     <script src="/javascripts/uri.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
