--- a/node.jquery.mobile/public/views/about.html
+++ b/node.jquery.mobile/public/views/about.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <meta charset="utf-8">
     <title>{title}</title>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
-    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
+    <link rel="stylesheet" href="/css/jquery.mobile-1.1.1.min.css" />
+    <script src="/javascripts/jquery-1.7.1.min.js"></script>
+    <script src="/javascripts/jquery.mobile-1.1.1.min.js"></script>
     <script src="/javascripts/uri.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
     <script src="/javascripts/backbone-min.js"></script>
@@ -23,8 +23,8 @@
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/about_0_0_1.js"></script>-->
 </head>
-<body class="ui-mobile-viewport" id="about">
-    <div data-role="page" class="ui-page ui-body-c ">
+<body class="ui-mobile-viewport">
+    <div data-role="page" id="about" class="ui-page ui-body-c ">
         <div data-role="header" class="ui-bar-a ui-header" role="banner">
             <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
                 <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
