--- a/node.jquery.mobile/public/views/about.html
+++ b/node.jquery.mobile/public/views/about.html
@@ -19,6 +19,7 @@
     <script src="/javascripts/socket.io.js"></script>
     <script src="/javascripts/dust-full-0.3.0.min.js"></script>
     <script src="/javascripts/node-plates.js"></script>
+    <script src="/javascripts/node-plates-mobile.js"></script>
     <!--precompile
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/about_0_0_1.js"></script>-->
