--- a/node.jquery.mobile/public/views/partials/login.html
+++ b/node.jquery.mobile/public/views/partials/login.html
@@ -8,6 +8,11 @@
         <h2>{title}</h2>
         <ul id="options" type="square"></ul>
         <p>complete the below to login/register</p>
+        <section>
+            <ul>
+                {#errors}<li>{error}</li>{/errors}
+            </ul>
+        </section>
         <form method="{login.method}" action="{login.domain}{login.port}/{login.path}" data-ajax="false"  enctype="application/x-www-form-urlencoded">
             <div data-role="fieldcontain">
                 <label for="name">{login.username.label}:</label>
